# oko_web

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  compose.yaml  input.css  tailwind.css
src/: backend.rs  main.rs
src/components/: bauchbinde.rs  mod.rs  nav.rs  section.rs  setting.rs  title.rs
src/integrations/: mod.rs  propresenter.rs  vmix.rs
src/integrations/bruno/: bruno.json
src/integrations/bruno/propresenter/: addMessage.bru  clearMessage.bru  editMessage.bru  folder.bru  getMessages.bru  removeMessage.bru  triggerMessage.bru
src/integrations/bruno/vmix/: OverlayInput1.bru  SetText.bru  folder.bru
src/sql/: add_announcement.sql  add_name.sql  add_section.sql  edit_announcement_name.sql  edit_announcement_text.sql  edit_name.sql  edit_section.sql  get_announcements.sql  get_bauchbinden.sql  get_propresenter.sql  get_vmix.sql  migrate.sql  remove_announcement.sql  remove_name.sql  remove_names.sql  remove_section.sql  set_propresenter.sql  set_vmix.sql
src/views/: announcements.rs  bauchbinden.rs  home.rs  mod.rs  settings.rs
