[package]
name = "oko_web"
version = "0.1.0"
authors = ["Dav32_1 <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack", "logger"] }
lucide-dioxus = "1.1.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde-xml-rs = "0.7.0"

rusqlite = { version = "0.35.0", features = ["bundled"], optional = true }
reqwest = { version = "0.12.15", features = ["json"] }

tracing = "0.1.41"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:rusqlite"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
