[package]
name = "oko_web"
version = "0.1.0"
authors = ["Dav32_1 <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.4", features = ["router", "fullstack", "logger"] }
dioxus-html = { version = "0.7.4", features = ["serialize"]}
lucide-dioxus = { version = "2.577.0", features = ["all-icons"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde-xml-rs = "0.8.2"

rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }
tokio = { version = "1.51.0", optional = true }
reqwest = { version = "0.13.2", features = ["json", "query"] }

anyhow = "1.0.102"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:rusqlite", "dep:tokio"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
